--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "classnames": "^2.2.6",
     "connect-mongo": "^2.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "gravatar": "^1.8.0",
