--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "connect-mongo": "^2.0.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
+    "dotenv-webpack": "^1.7.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "gravatar": "^1.8.0",
