--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "styled-components": "^4.4.0",
     "styled-icons": "^7.15.1",
     "styled-spinkit": "^0.7.4",
+    "url-js": "^0.2.5",
     "validator": "^10.11.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
