--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,7 @@
         "loose": true
       }
     ],
+    ["@babel/plugin-proposal-private-methods", { "loose": true }],
     [
       "babel-plugin-styled-components"
     ]
